Fix #774 not showing configured background

--- a/collectives/static/css/legacy/main.scss
+++ b/collectives/static/css/legacy/main.scss
@@ -165,7 +165,6 @@ form input, form select{
 /* Class for the cover image (skiing man) */
 #cover{
 	margin: 0;
-  	background-image: url("/static/img/cover.jpg");
   	background-size: cover;
 	height: 100vh;
 	display: flex;
